# EmailSendler

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  email_service.py  main.py  models.py  redis_client.py  schemas.py  worker.py
