[project]
name = "stepikfastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "thrandishow",email = "thrandi230807@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "aiosmtplib (>=4.0.2,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
